# FaceTools

./: .gitignore  CMakeLists.txt  DetectionCheckDialog.cpp  DetectionCheckDialog.h  DetectionCheckDialog.ui  FaceTools_res.qrc  QuaZipConfig.cmake  README.md  ReportChooserDialog.cpp  ReportChooserDialog.h  ReportChooserDialog.ui  custom_quazip.tgz  dlib_CMakeLists.txt  quazip-master_CMakeLists.txt  res.qrc
cmake/: FaceToolsConfig.cmake  FindLibs.cmake  LibCommon.cmake  LinkLibs.cmake  LinkTargets.cmake  Macros.cmake
deprecated/: LandmarksUpdater.cpp  LandmarksUpdater.h
forms/: ChartDialog.ui  DetectionCheckDialog.ui  LandmarksCheckDialog.ui  LandmarksDialog.ui  MeshInfoDialog.ui  MetricsDialog.ui  MetricsDisplayDialog.ui  ModelPropertiesDialog.ui  PhenotypesDialog.ui  ReportChooserDialog.ui  ResizeDialog.ui  ScanInfoDialog.ui  ScanInfoDialog.ui_NEW
include/: ActionAddLandmark.h  ActionAlignFace.h  ActionCloseModel.h  ActionCropBoundary.h  ActionDeleteLandmark.h  ActionDetectFace.h  ActionExportPDF.h  ActionFullScreenViewer.h  ActionLoadModel.h  ActionMoveFace.h  ActionOrientCameraToFace.h  ActionPrintSurfaceInfo.h  ActionProcessModel.h  ActionResetCamera.h  ActionSaveModel.h  ActionSaveModelAs.h  ActionSaveSnapshot.h  ActionSetFocus.h  ActionToggleShowBoundary.h  ActionToggleShowLandmarks.h  AssImpIO.h  BoundaryView.h  CorrespondenceFinder.h  CurvatureSpeedFunctor.h  CurvatureVariableSpeedFunctor.h  Ethnicities.h  FaceActionInterface.h  FaceActionWorker.h  FaceAssessment.h  FaceAverager.h  FaceControl.h  FaceControlSet.h  FaceDetector.h  FaceFinder2D.h  FaceModel.h  FaceModelCurvature.h  FaceModelFileIOHandler.h  FaceModelManager.h  FaceModelSurfaceData.h  FaceModelTabWidget.h  (+54 more)
include/Action/: ActionAddLandmark.h  ActionAddPath.h  ActionAlignICP.h  ActionAlignLandmarks.h  ActionAlignVertices.h  ActionBackfaceCulling.h  ActionChangeScalarMappingColours.h  ActionChangeSurfaceMappingRange.h  ActionClean.h  ActionCloseAllFaceModels.h  ActionCloseFaceModel.h  ActionCloseFaceModels.h  ActionComponentSelect.h  ActionCopyView.h  ActionCopyViewer.h  ActionCrop.h  ActionDeleteLandmark.h  ActionDeletePath.h  ActionDetectFace.h  ActionDiscardManifold.h  ActionEditLandmarks.h  ActionEditPaths.h  ActionExecutionQueue.h  ActionExportMetaData.h  ActionExportPDF.h  ActionFillHoles.h  ActionGetComponent.h  ActionGetFaceComponent.h  ActionGetFaceManifold.h  ActionImportMetaData.h  ActionInvertNormals.h  ActionLoadDirFaceModels.h  ActionLoadFaceModels.h  ActionMakeHalfFace.h  ActionMapCurvature.h  ActionMapSurfaceData.h  ActionMarquee.h  ActionMoveView.h  ActionMoveViewer.h  ActionNonRigidRegistration.h  (+59 more)
include/Detect/: FaceDetector.h  FaceFinder2D.h  FaceOrientationDetector.h  FaceOrienter.h  FaceShapeLandmarks2DDetector.h  FacialOrientation.h  FeaturesDetector.h  NoseFinder.h
include/FaceTools/: Ethnicities.h  FaceAssessment.h  FaceModel.h  FaceModelCurvature.h  FaceModelCurvatureStore.h  FaceModelDelta.h  FaceModelDeltaStore.h  FaceModelSymmetry.h  FaceModelSymmetryStore.h  FaceModelViewer.h  FaceTypes.h  FaceViewSet.h  MaskRegistration.h  MiscFunctions.h  ModelSelect.h  ModelViewer.h  ModelViewerAnnotator.h  MultiFaceModelViewer.h  Path.h  PathSet.h  U3DCache.h
include/FileIO/: BackgroundModelLoader.h  CloseFaceModelsHelper.h  FaceModelAssImpFileHandler.h  FaceModelAssImpFileHandlerFactory.h  FaceModelFileHandler.h  FaceModelFileHandlerException.h  FaceModelFileHandlerInterface.h  FaceModelFileHandlerMap.h  FaceModelManager.h  FaceModelOBJFileHandler.h  FaceModelPLYFileHandler.h  FaceModelU3DFileHandler.h  FaceModelXMLFileHandler.h  LoadFaceModelsHelper.h
include/Interactor/: ActorMoveHandler.h  ActorMoveNotifier.h  ContextMenu.h  ContextMenuInteractor.h  FaceEntryExitInteractor.h  FaceHoveringInteractor.h  FaceViewInteractor.h  LandmarksHandler.h  LandmarksInteractor.h  MeasureInteractor.h  MetricsInteractor.h  ModelEntryExitInteractor.h  ModelMoveInteractor.h  ModelMoveResponder.h  ModelSelectInteractor.h  ModelViewerEntryExitInteractor.h  ModelViewerInteractor.h  MouseHandler.h  MovementNotifier.h  MovementTrigger.h  PathSetInteractor.h  PathsHandler.h  PathsInteractor.h  PropHandler.h  PropNotifier.h  RadialSelectHandler.h  RadialSelectInteractor.h  SelectMouseHandler.h  SelectNotifier.h  ViewerInteractionManager.h  ViewerNotifier.h
include/LndMrk/: Landmark.h  LandmarkSet.h  Landmarks.h  LandmarksManager.h
include/Metric/: AngleMetricCalculatorType.h  Chart.h  CircularityMetricCalculatorType.h  CurvatureMetricCalculatorType.h  DistanceMetricCalculatorType.h  Gene.h  GeneManager.h  GrowthData.h  HPOTerm.h  HPOTermManager.h  InterlandmarkMetricCalculatorType.h  LineAngleMetricCalculatorType.h  MetricCalculator.h  MetricCalculatorManager.h  MetricCalculatorType.h  MetricCalculatorTypeInterface.h  MetricCalculatorTypeRegistry.h  MetricSet.h  MetricValue.h  Phenotype.h  PhenotypeManager.h  Syndrome.h  SyndromeManager.h
include/Report/: BaseReportTemplate.h  Report.h  ReportInterface.h  ReportManager.h  SampleReport.h
include/Vis/: AngleVisualiser.h  BaseVisualisation.h  BoundaryView.h  BoundaryVisualisation.h  (+36 more)
src/: ActionAddLandmark.cpp  ActionAlignFace.cpp  ActionCloseModel.cpp  ActionCropBoundary.cpp  ActionDeleteLandmark.cpp  ActionDetectFace.cpp  ActionExportPDF.cpp  ActionFullScreenViewer.cpp  ActionLoadModel.cpp  ActionMoveFace.cpp  ActionOrientCameraToFace.cpp  ActionPrintSurfaceInfo.cpp  ActionProcessModel.cpp  ActionResetCamera.cpp  ActionSaveModel.cpp  ActionSaveModelAs.cpp  ActionSaveSnapshot.cpp  ActionSetFocus.cpp  ActionToggleShowBoundary.cpp  ActionToggleShowLandmarks.cpp  AssImpIO.cpp  BoundaryView.cpp  CorrespondenceFinder.cpp  CurvatureSpeedFunctor.cpp  CurvatureVariableSpeedFunctor.cpp  Ethnicities.cpp  FaceActionInterface.cpp  FaceActionWorker.cpp  FaceActions.cpp  FaceAssessment.cpp  FaceAverager.cpp  FaceControl.cpp  FaceControlSet.cpp  FaceDetector.cpp  FaceFinder2D.cpp  FaceModel.cpp  FaceModelCurvature.cpp  FaceModelCurvatureStore.cpp  FaceModelDelta.cpp  FaceModelDeltaStore.cpp  (+58 more)
test/Metric/MetricCalculatorLoader/: CMakeLists.txt  main.cpp
(+553 files in other folders)
